2014-12-18  Ralf Hemmecke  <ralf@hemmecke.org>

	* src/algebra/intpar.spad: fix RootFSSplit argument

2014-12-12  Ralf Hemmecke  <ralf@hemmecke.org>

	* src/algebra/laurent.spad: fix "series" of
	UnivariateLaurentSeriesConstructor

2014-12-09  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/polycat.spad: Fix 'totalDegreeSorted'.

2014-12-01  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/mts.spad: Add 'coefficients' and 'series'

2014-11-27  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	Rework extended integration
	* src/algebra/intpar.spad: New file
	src/algebra/curve.spad, src/algebra/odealg.spad,
	src/algebra/pseudolin.spad: Generalize
	src/algebra/intaf.spad, src/algebra/intef.spad,
	src/algebra/rdeefx.spad, src/algebra/Makefile.in: Adjust
	src/algebra/oderf.spad: Fix a few problems
	src/algebra/intalg.spad, src/algebra/intrf.spad: Remove
	now unused code

2014-11-24  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/g-error.boot: Correct a typo

2014-11-21  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/array2.spad, src/algebra/mama.spad:
	Allow empty matrices as result of spliting

2014-11-20  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/sups.spad: Fix bug in 'order'

2014-11-14  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* configure.ac, src/lib/cfuns-c.c: Try harder to use
	host directory operations

2014-11-08  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/files.spad, src/interp/nlib.lisp,
	src/interp/daase.lisp, src/interp/macros.lisp,
	src/interp/ht-util.boot, src/interp/server.boot:
	Avoid FINISH-OUTPUT

2014-11-07  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/vmlisp.lisp: Redirect IO when running programs
	from Closure CL

2014-11-07  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/Makefile.in: Add FORMCAT to CATLIST

2014-11-06  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/plot.spad, src/algebra/plot3d.spad: